--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,8 @@
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "es5",
-    "useTabs": false
+    "useTabs": false,
+    "plugins": [
+        "prettier-plugin-tailwindcss"
+    ]
 }
