--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@uiw/react-color-circle": "^2.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.379.0",
     "proxy-memoize": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
