--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@uiw/react-color-circle": "^2.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
