--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@uiw/react-color-circle": "^2.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.379.0",
     "proxy-memoize": "^3.0.0",
     "react": "^18.2.0",
